Criando o arquivo de rotas e pegando uris não dinâmicas.

--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,8 @@
             "app\\":"app"
         },
         "files": [
-            "app/helpers/constants.php"
+            "app/helpers/constants.php",
+            "app/routers/router.php"
         ]
     }
 }
