--- a/composer.json
+++ b/composer.json
@@ -1,18 +1,24 @@
 {
     "name": "robson/fr-php",
+    "description": "",
+    "minimum-stability": "stable",
+    "license": "MIT",
     "authors": [
         {
             "name": "Robson Souza Lourenço",
             "email": "robson.lourenco.pacheco@gmail.com"
         }
     ],
-    "require": {},
     "autoload": {
         "psr-4": {
-            "App\\":"app"
+            "Source\\":"source/"
         },
         "files": [
-            
+            "source/Config.php"
         ]
+    },
+    "require": {
+        "coffeecode/router": "2.0.*",
+        "coffeecode/datalayer": "2.0.*"
     }
 }
